--- a/web/administrador/editar-formatoproducto.xhtml
+++ b/web/administrador/editar-formatoproducto.xhtml
@@ -15,8 +15,8 @@
                     <p:breadCrumb styleClass="migaDePan">
                         <p:menuitem value="Inicio" outcome="./../perfiles/vista-administrador.xhtml" />
                         <p:menuitem value="Administrador" outcome="./../perfiles/vista-administrador.xhtml" />
-                        <p:menuitem value="Administrar fases" outcome="administrar-fases" />
-                        <p:menuitem value="Ver fase" />
+                        <p:menuitem value="Administrar fases" outcome="administrar-formato-productos" />
+                        <p:menuitem value="Editar Formato de Trabajo" />
                     </p:breadCrumb>
                 </h:form>
             </ui:define>
@@ -28,29 +28,27 @@
                 #{menuController.setOutPerfiles(true)}
                 #{validarPerfiles.validarPerfil("Administrador")}                
                 <f:metadata>
-                    <f:viewParam name="fase" value="#{administrarFasesController.faseId}" />
+                    <f:viewParam name="formatoproducto" value="#{administradorProductosTrabajoController.formatoproducto}" />
                 </f:metadata>
                 <p:panel styleClass="paneltrabajo" >
                     <div class="tituloContenido">                        
-                        Ver Fase <br />
+                        Editar Formato de Trabajo <br />
                     </div>
                     <p:spacer height="30"/>
                     <h:form>
                         <p:growl id="growl" showDetail="false" life="5000"/>
-                        <h:panelGrid columns="2" style="margin: 0 auto;" cellpadding="4" cellspacing="4" >
-                            <h:outputText value="Id:" style="font-weight: bold;"/>
-                            <h:outputText value="#{administrarFasesController.fase.faseid}" />
+                        <h:panelGrid columns="2"  style="margin: 0 auto;" >
+                            <h:outputText value="Id de el producto de trabajo:" />
+                            <p:inputText value="#{administradorProductosTrabajoController.getlstFormatoProducto.formatoid}" />
                             <h:outputText /><h:outputText />
-                            <h:outputText value="Nombre:" style="font-weight: bold;"/>
-                            <h:outputText value="#{administrarFasesController.fase.fasenombre}" />
-                            <h:outputText /><h:outputText />
-                            <h:outputText value="Orden:" style="font-weight: bold;"/>
-                            <h:outputText value="#{administrarFasesController.fase.faseorden}" />
+                            <h:outputText value="Nombre del Producto de Trabajo:" />
+                            <p:inputText value="#{administradorProductosTrabajoController.getlstFormatoProducto.formatonombre}" />
                         </h:panelGrid>
                         <p:spacer height="30"/>
-                        <h:panelGrid columns="1" style="margin: 0 auto;">
-                            <p:button id="cmdLinkVolver" value="Volver" outcome="administrar-fases" icon="ui-icon-arrowthick-1-w" style="font-size: 13px; width: 120px;" />
-                        </h:panelGrid> 
+                        <h:panelGrid columns="2" style="margin: 0 auto;">
+                            <p:button id="cmdLinkVolver" value="Cancelar" outcome="administrar-formato-productos" icon="ui-icon-arrowthick-1-w" style="font-size: 13px; width: 120px;" />
+                            <p:commandButton value="Editar" update="growl" action="#{administradorProductosTrabajoController.editarFormatoproducto()}" icon="ui-icon-pencil" style="font-size: 13px; width: 120px;"/>
+                        </h:panelGrid>
                     </h:form>
                 </p:panel>
             </ui:define>
