--- a/web/administrador/eliminar-fase.xhtml
+++ b/web/administrador/eliminar-fase.xhtml
@@ -34,24 +34,27 @@
                     <div class="tituloContenido">                        
                         Eliminar Fase <br />
                     </div>
-                    <h:panelGrid columns="2" style="margin: 0 auto;" >
-                        <h:outputText value="Id de la Fase:" />
-                        <h:outputText value="#{administrarFasesController.fase.faseid}" />
-                        <h:outputText /><h:outputText />
-                        <h:outputText value="Nombre de la Fase:" />
-                        <h:outputText value="#{administrarFasesController.fase.fasenombre}" />
-                        <h:outputText /><h:outputText />
-                        <h:outputText value="Orden de la Fase:" />
-                        <h:outputText value="#{administrarFasesController.fase.faseorden}" />
-                    </h:panelGrid>
-                    <h:panelGrid columns="2" style="margin: 0 auto;">
-                        <p:button id="cmdLinkVolver" value="Cancelar" outcome="administrar-fases" />
-                        <p:commandButton value="Eliminar" actionListener="#{administrarFasesController.eliminarFase()}" />
-                    </h:panelGrid>
+                    <p:spacer height="30"/>
+                    <h:form>
+                        <p:growl id="growl" showDetail="false" life="5000"/>
+                        <h:panelGrid columns="2" style="margin: 0 auto;" cellpadding="4" cellspacing="4" >
+                            <h:outputText value="Id:" style="font-weight: bold;"/>
+                            <h:outputText value="#{administrarFasesController.fase.faseid}" />
+                            <h:outputText /><h:outputText />
+                            <h:outputText value="Nombre:" style="font-weight: bold;"/>
+                            <h:outputText value="#{administrarFasesController.fase.fasenombre}" />
+                            <h:outputText /><h:outputText />
+                            <h:outputText value="Orden:" style="font-weight: bold;"/>
+                            <h:outputText value="#{administrarFasesController.fase.faseorden}" />
+                        </h:panelGrid>
+                        <p:spacer height="30"/>
+                        <h:panelGrid columns="2" style="margin: 0 auto;">
+                            <p:button id="cmdLinkVolver" value="Cancelar" outcome="administrar-fases" icon="ui-icon-arrowthick-1-w" style="font-size: 13px; width: 120px;" />
+                            <p:commandButton value="Eliminar" action="#{administrarFasesController.eliminarFase()}" icon="ui-icon-closethick" style="font-size: 13px; width: 120px;"/>
+                        </h:panelGrid>
+                    </h:form>
                 </p:panel>
             </ui:define>
-
         </ui:composition>
-
     </body>
 </html>
